examples/error/array_error.c
void main(){
	int[][] a;
	int[] b;
	int c;

	float[] d;
	bool[] e;

	d = new float[3];
	e = new bool[2];
	a = new int[2][3];
	b = new int[3.2];

	b=a[0];
	
	e = d;
	b = c[1];
	a = b[0][0];
}
